@@ -11,7 +11,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Singleton
 public class MemberProfileReportServicesImpl implements MemberProfileReportServices {
@@ -32,7 +31,7 @@ public class MemberProfileReportServicesImpl implements MemberProfileReportServi
             List<MemberProfileRecord> allRecords = memberProfileReportRepository.findAll();
             memberRecords.addAll(allRecords);
         } else {
-            List<String> memberIds = queryDTO.getMemberIds().stream().map(UUID::toString).collect(Collectors.toList());
+            List<String> memberIds = queryDTO.getMemberIds().stream().map(UUID::toString).toList();
             List<MemberProfileRecord> filteredRecords = memberProfileReportRepository.findAllByMemberIds(memberIds);
             memberRecords.addAll(filteredRecords);
         }
